[package]
name = "ac_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
specs = { version = "0.19.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
